test/corpus/cases.txt
================================================================================
Element Split by Jinja Expressions
================================================================================

<div></div>

{% if true %}
<div>
{% endif %}
    hello
{% if true %}
</div>
{% endif %}

--------------------------------------------------------------------------------

(source_file
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name)))
  (jinja_if_statement
    (start_statement
      (expression
        (jinja_boolean)))
    (body
      (single_element
        (start_tag
          (tag_name))))
    (end_statement))
  (text)
  (jinja_if_statement
    (start_statement
      (expression
        (jinja_boolean)))
    (body
      (single_element
        (end_tag
          (tag_name))))
    (end_statement)))

================================================================================
Decomposed expression: attribute access, filters, tests, empty strings
================================================================================

{{ form.get('x').name | default('') }}
{% if user is defined and n % 2 %}{% endif %}

--------------------------------------------------------------------------------

(source_file
  (jinja_output
    (expression
      (jinja_identifier)
      (jinja_attribute
        (jinja_identifier))
      (jinja_operator)
      (jinja_string)
      (jinja_operator)
      (jinja_attribute
        (jinja_identifier))
      (jinja_filter
        (jinja_identifier))
      (jinja_operator)
      (jinja_string)
      (jinja_operator)))
  (jinja_if_statement
    (start_statement
      (expression
        (jinja_identifier)
        (jinja_test
          (jinja_identifier))
        (jinja_identifier)
        (jinja_operator)
        (jinja_number)))
    (end_statement)))

================================================================================
Line statements and line comments
================================================================================

% for item in items
  <li>{{ item.id }}</li>
% endfor
## a line comment

--------------------------------------------------------------------------------

(source_file
  (jinja_line_statement
    (jinja_identifier)
    (jinja_identifier))
  (element
    (start_tag
      (tag_name))
    (jinja_output
      (expression
        (jinja_identifier)
        (jinja_attribute
          (jinja_identifier))))
    (end_tag
      (tag_name)))
  (jinja_line_statement)
  (jinja_line_comment))
