test/corpus/real-world.txt
================================================================================
Real World - 0
================================================================================

<!DOCTYPE html>
<html lang="en">
    <head>
        <title>My Webpage</title>
    </head>
    <body>
        <ul id="{{ v }}" class="{{ v }}">
            {% for item in navigation %}
            <li><a href="{{ item.href }}">{{ item.caption }}</a></li>
            {% endfor %}
        </ul>
        <h1>{{ v }} </h1>
        

        {# a comment #}
 
        {% if true %}
        <div>
        {% endif %}
            hello
        {% if true %}
        </div>
        {% endif %}
        
    </body>
</html>

--------------------------------------------------------------------------------

(source_file
  (doctype)
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (element
      (start_tag
        (tag_name))
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (element
        (start_tag
          (tag_name)
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (jinja_output
                (expression
                  (jinja_identifier)))))
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (jinja_output
                (expression
                  (jinja_identifier))))))
        (jinja_for_statement
          (start_statement
            (expression
              (jinja_identifier)
              (jinja_identifier)))
          (body
            (element
              (start_tag
                (tag_name))
              (element
                (start_tag
                  (tag_name)
                  (attribute
                    (attribute_name)
                    (quoted_attribute_value
                      (jinja_output
                        (expression
                          (jinja_identifier)
                          (jinja_attribute
                            (jinja_identifier)))))))
                (jinja_output
                  (expression
                    (jinja_identifier)
                    (jinja_attribute
                      (jinja_identifier))))
                (end_tag
                  (tag_name)))
              (end_tag
                (tag_name))))
          (end_statement))
        (end_tag
          (tag_name)))
      (element
        (start_tag
          (tag_name))
        (jinja_output
          (expression
            (jinja_identifier)))
        (end_tag
          (tag_name)))
      (jinja_comment)
      (jinja_if_statement
        (start_statement
          (expression
            (jinja_boolean)))
        (body
          (single_element
            (start_tag
              (tag_name))))
        (end_statement))
      (text)
      (jinja_if_statement
        (start_statement
          (expression
            (jinja_boolean)))
        (body
          (single_element
            (end_tag
              (tag_name))))
        (end_statement))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))
